# GstreamerSplitter_2_0

./: CMakeLists.txt  README.md  out.mkv
info/: info.txt
params/: config_bertin.txt  config_camera.txt  config_debug.txt  config_imx296.txt  config_sp_264.txt  config_sp_265.txt  config_viewer.txt  video_to_rtsp.txt  video_to_rtsp_bertin.txt  video_to_rtsp_imx296.txt
scripts/: install_rtsp_service.sh  launch_double_rtsp.sh  static_ip.sh  usb-to-rtsp-double.service.in
src/: cam_to_rtsp.c  receiver.c  server.c  vc_mipi_camera.json  vc_mipi_camera_mono.json  video_2_rtsp.c
src/pisp/: imx296_mono.json  imx477_noir_custom.json  vc_mipi_camera.json  vc_mipi_camera_mono.json
ubuntu_service/: cam-capture.service  cam_capture.sh  motion-prep.service  rtsp_bridge.service
